tests/paczka1/fuzzy1/27232519.err
Error in line 1: A440 A440 43,8
Error in line 4: 8qCNOwvO03b S984 17,2
Error in line 19: dfNFCwsov S700 21,6
Error in line 21: G1UF S700 96,8
Error in line 24: G1UF A440 48,5
Error in line 34: dfNFCwsov A440 -1,86
